--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,10 @@ test-results*/
 *.routerdb
 *.osm.pbf
 
+.idea
+.idea/*
+
+./test/OpenLR.Test.Functional/logs*/
+
 packages/*
 !packages/repositories.config
