--- a/nuspec/OpenLR.Geo.nuspec
+++ b/nuspec/OpenLR.Geo.nuspec
@@ -14,15 +14,15 @@
     <dependencies>
       <group targetFramework=".NETFramework4.0">
         <dependency id="OpenLR" version="$version$" exclude="Build,Analyzers" />
-        <dependency id="Itinero.Geo" version="1.4.0-pre18" exclude="Build,Analyzers" />
+        <dependency id="Itinero.Geo" version="1.4.0-pre20" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETFramework4.5.1">
         <dependency id="OpenLR" version="$version$" exclude="Build,Analyzers" />
-        <dependency id="Itinero.Geo" version="1.4.0-pre18" exclude="Build,Analyzers" />
+        <dependency id="Itinero.Geo" version="1.4.0-pre20" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETStandard1.3">
         <dependency id="OpenLR" version="$version$" exclude="Build,Analyzers" />
-        <dependency id="Itinero.Geo" version="1.4.0-pre18" exclude="Build,Analyzers" />
+        <dependency id="Itinero.Geo" version="1.4.0-pre20" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
@@ -30,5 +30,6 @@
     <file src="src\OpenLR.Geo\bin\Release\net40\OpenLR.Geo.dll" target="lib\net40\OpenLR.Geo.dll" />
     <file src="src\OpenLR.Geo\bin\Release\net451\OpenLR.Geo.dll" target="lib\net451\OpenLR.Geo.dll" />
     <file src="src\OpenLR.Geo\bin\Release\netstandard1.3\OpenLR.Geo.dll" target="lib\netstandard1.3\OpenLR.Geo.dll" />
+    <file src="src\OpenLR.Geo\bin\Release\netstandard2.0\OpenLR.Geo.dll" target="lib\netstandard2.0\OpenLR.Geo.dll" />
   </files>
 </package>
