--- a/test/OpenLR.Test.Functional/OpenLR.Test.Functional.csproj
+++ b/test/OpenLR.Test.Functional/OpenLR.Test.Functional.csproj
@@ -27,8 +27,8 @@
     <ProjectReference Include="..\..\src\OpenLR\OpenLR.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Itinero.IO.Osm" Version="1.4.0-pre92" />
-    <PackageReference Include="Itinero.IO.Shape" Version="1.4.0-pre92" />
+    <PackageReference Include="Itinero.IO.Osm" Version="1.4.0" />
+    <PackageReference Include="Itinero.IO.Shape" Version="1.4.0" />
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="1.15.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="NUnit" Version="3.9.0" />
