--- a/src/OpenLR/OpenLR.csproj
+++ b/src/OpenLR/OpenLR.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard1.3;net40;net45;net451</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard1.3;net45;net451</TargetFrameworks>
     <AssemblyName>OpenLR</AssemblyName>
     <PackageId>OpenLR</PackageId>
     <NetStandardImplicitPackageVersion Condition=" '$(TargetFramework)' == 'netstandard1.3' ">1.6.1</NetStandardImplicitPackageVersion>
@@ -18,6 +18,6 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Itinero" Version="1.4.0-pre92" />
+    <PackageReference Include="Itinero" Version="1.4.0" />
   </ItemGroup>
 </Project>
