Removed old nuspecs.

--- a/src/OpenLR.Geo/OpenLR.Geo.csproj
+++ b/src/OpenLR.Geo/OpenLR.Geo.csproj
@@ -9,6 +9,16 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
     <LangVersion>default</LangVersion>
+    <PackageVersion />
+    <Title>OpenLR.Geo</Title>
+    <Authors>Itinero BV</Authors>
+    <Description>OpenLR library for .NET.</Description>
+    <Copyright>Itinero BV</Copyright>
+    <PackageProjectUrl>https://github.com/Itinero/OpenLR</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/itinero/OpenLR/blob/develop/LICENSE.md</PackageLicenseUrl>
+    <PackageIconUrl>http://www.itinero.tech/logos/openlr_logo64.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/Itinero/OpenLR</RepositoryUrl>
+    <PackageTags>openlr, routing, NTS</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenLR\OpenLR.csproj" />
