Updated OSM sample.

--- a/samples/Samples.OSM/Samples.OSM.csproj
+++ b/samples/Samples.OSM/Samples.OSM.csproj
@@ -10,7 +10,7 @@
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <LangVersion>7.2</LangVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Itinero.IO.Osm" Version="1.4.0-pre92" />
