Performance improvements and itinero update. - Replaced profile calls with cached equivalents. - Made max resolve distance configurable. - Fixed bam encode tests.

--- a/src/OpenLR.Geo/OpenLR.Geo.csproj
+++ b/src/OpenLR.Geo/OpenLR.Geo.csproj
@@ -24,7 +24,7 @@
     <ProjectReference Include="..\OpenLR\OpenLR.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Itinero.Geo" Version="1.4.0" />
+    <PackageReference Include="Itinero.Geo" Version="1.6.0-pre025" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
