--- a/src/OpenLR.Geo/OpenLR.Geo.csproj
+++ b/src/OpenLR.Geo/OpenLR.Geo.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="../../OpenLR.Common.props" />
+  
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>OpenLR.Geo</AssemblyName>
     <PackageId>OpenLR.Geo</PackageId>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
@@ -9,22 +11,14 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
     <LangVersion>default</LangVersion>
-    <PackageVersion />
     <Title>OpenLR.Geo</Title>
-    <Authors>Itinero BV</Authors>
-    <Description>OpenLR library for .NET.</Description>
-    <Copyright>Itinero BV</Copyright>
-    <PackageProjectUrl>https://github.com/Itinero/OpenLR</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/itinero/OpenLR/blob/develop/LICENSE.md</PackageLicenseUrl>
-    <PackageIconUrl>http://www.itinero.tech/logos/openlr_logo64.png</PackageIconUrl>
-    <RepositoryUrl>https://github.com/Itinero/OpenLR</RepositoryUrl>
     <PackageTags>openlr, routing, NTS</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenLR\OpenLR.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Itinero.Geo" Version="1.6.0-pre025" />
+    <PackageReference Include="Itinero.Geo" Version="1.6.0-pre037" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
