--- a/src/OpenLR/OpenLR.csproj
+++ b/src/OpenLR/OpenLR.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="../../OpenLR.Common.props" />
+  
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>OpenLR</AssemblyName>
     <PackageId>OpenLR</PackageId>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
@@ -9,23 +11,12 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
     <LangVersion>default</LangVersion>
-    <PackageVersion />
     <Title>OpenLR</Title>
-    <Description>OpenLR library for .NET.</Description>
-    <Copyright>Itinero BV</Copyright>
-    <PackageProjectUrl>https://github.com/Itinero/OpenLR</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/itinero/OpenLR/blob/develop/LICENSE.md</PackageLicenseUrl>
-    <PackageIconUrl>http://www.itinero.tech/logos/openlr_logo64.png</PackageIconUrl>
-    <RepositoryUrl>https://github.com/Itinero/OpenLR</RepositoryUrl>
-    <PackageTags>openlr, routing</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\SharedAssemblyVersion.cs" Link="Properties\SharedAssemblyVersion.cs" />
+    <PackageReference Include="Itinero" Version="1.6.0-pre037" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Itinero" Version="1.6.0-pre025" />
   </ItemGroup>
 </Project>
