--- a/test/OpenLR.Test.Functional/OpenLR.Test.Functional.csproj
+++ b/test/OpenLR.Test.Functional/OpenLR.Test.Functional.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>OpenLR.Test.Functional</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>OpenLR.Test.Functional</PackageId>
@@ -39,9 +39,9 @@
     <ProjectReference Include="..\..\src\OpenLR\OpenLR.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Itinero.IO.Osm" Version="1.6.0-pre025" />
-    <PackageReference Include="Itinero.IO.Shape" Version="1.6.0-pre025" />
-    <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="1.15.5" />
+    <PackageReference Include="Itinero.IO.Osm" Version="1.6.0-pre036" />
+    <PackageReference Include="Itinero.IO.Shape" Version="1.6.0-pre036" />
+    <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="4.0.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="Serilog">
       <Version>2.9.0</Version>
