Fixed version string.

--- a/OpenLR.Common.props
+++ b/OpenLR.Common.props
@@ -3,7 +3,7 @@
 
     <!--- Package information, Version -->
     <PropertyGroup>
-        <PackageVersion>1.1.1-pre11=2</PackageVersion>
+        <PackageVersion>1.1.1-pre12</PackageVersion>
         <NeutralLanguage>en</NeutralLanguage>
         <Description>OpenLR library for .NET.</Description>
         <Copyright>Itinero BV</Copyright>
