--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -32,6 +32,10 @@ jobs:
     - name: Nuget Pack
       run: dotnet pack -c release
       working-directory: ./src/OpenLR.Geo/
+
+    - name: Nuget push Github
+      run: dotnet nuget push **/*.nupkg --skip-duplicate -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/itinero/index.json
+      working-directory: ./src/
       
     # - name: Nuget push
     #   run: dotnet nuget push **/*.nupkg --skip-duplicate -k ${{ secrets.NUGET_TOKEN }} -s https://api.nuget.org/v3/index.json
